# napcat_mcp

./: .env.example  CONFIG_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  USAGE.md  VIRTUAL_ENV_GUIDE.md  mcp_config_example.json  mcp_settings.json  mcp_settings.json.backup  pyproject.toml  quick_test.bat  run_direct.py  start.bat  start.sh  test_client.py  安装依赖.bat
src/: __init__.py
src/napcat_mcp/: __main__.py  napcat_client.py  server.py
