[project]
name = "napcat-mcp"
version = "0.2.0"
description = "MCP server wrapping all NapCat HTTP APIs (full access, HTTP + WebSocket)"
authors = [
    {name = "MaiBot Community"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "websockets>=13.0",
]

[project.scripts]
napcat-mcp = "napcat_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/napcat_mcp"]

[tool.hatch.build.targets.sdist]
packages = ["src/napcat_mcp"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]